--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						</li>
 					
 						<li class="nav-item">
-							<a class="nav-link scroll" href="#projects">Projects</a>
+							<a class="nav-link scroll" href="#services">Projects</a>
 						</li>
 					</ul>
 				</div>
